fix: edited feather spacing and background

--- a/src/components/Night.css
+++ b/src/components/Night.css
@@ -14,11 +14,11 @@
 }
 
 p {
-  color: #fff;
   font-size: 2.5rem;
 }
 
 .poemText {
+  color: #fff;
   display: inline-block;
   padding: 3rem;
   width: fit-content;
@@ -130,12 +130,14 @@ p {
 /* ======================= Page 5 ======================= */
 
 .section:nth-child(4) .poemText{
+  color: rgb(98, 80, 152);
   position: absolute;
-  top: 15%;
+  top: 25%;
   margin: 0 auto;
 }
 
 .wingsContainer {
+  perspective: 1000px;
   position: absolute;
   width: 100%;
   height: fit-content;
@@ -168,7 +170,7 @@ p {
 
 #feather3 {
   transform: scale(5.5) rotate(-100deg);
-  top: 55%;
+  top: 15%;
   left: 50%;
 }
 
@@ -257,7 +259,8 @@ p {
   align-items: center;
   justify-content: center;
   text-align: center;
-  background-color: palevioletred;
+  background: rgb(215,234,255);
+  background: radial-gradient(circle, rgba(215,234,255,1) 0%, rgb(114, 100, 157) 50%, rgb(57, 37, 117) 100%);
 }
 #page6 {
   position: relative;
